[workspace]
members = ["packages/*"]
resolver = "2"
exclude = ["deps"]

[workspace.package]
authors = ["Biyard"]
description = "Ratel"
edition = "2024"
repository = "https://github.com/biyard/ratel"
license = "MIT"

[workspace.dependencies]
bdk = { path = "deps/rust-sdk/packages/bdk" }

by-axum = { path = "deps/rust-sdk/packages/by-axum" }
by-components = { path = "deps/rust-sdk/packages/by-components" }
by-macros = { path = "deps/rust-sdk/packages/by-macros" }
by-types = { path = "deps/rust-sdk/packages/by-types" }
dioxus-translate = { path = "deps/rust-sdk/packages/dioxus-translate", features = [
    "ko",
] }
dioxus-aws = { path = "deps/rust-sdk/packages/dioxus-aws" }
rest-api = { path = "deps/rust-sdk/packages/rest-api" }
dioxus-oauth = { path = "./deps/rust-sdk/packages/dioxus-oauth" }
google-wallet = { path = "./deps/rust-sdk/packages/google-wallet" }
dioxus-popup = { path = "./deps/rust-sdk/packages/dioxus-popup" }
btracing = { path = "./deps/rust-sdk/packages/btracing" }

serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.133"
slog = "2.7.0"
common = { path = "./packages/common" }
reqwest = { version = "0.12.5", features = ["blocking", "json", "multipart"] }
sqlx = { version = "0.8.3", features = [
    "sqlite",
    "postgres",
    "runtime-tokio",
    "time",
    "bigdecimal",
] }

dioxus = { version = "0.6.3", git = "https://github.com/hackartists/dioxus.git" }
dioxus-web = { version = "0.6.3", git = "https://github.com/hackartists/dioxus.git" }

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
