[workspace]
members = ["packages/*"]
resolver = "2"
exclude = ["deps"]

[workspace.package]
authors = ["Biyard"]
description = "Ratel"
edition = "2024"
repository = "https://github.com/biyard/ratel"
license = "MIT"

[workspace.dependencies]
bdk = { path = "deps/rust-sdk/packages/bdk" }

dioxus-oauth = { path = "./deps/rust-sdk/packages/dioxus-oauth" }
google-wallet = { path = "./deps/rust-sdk/packages/google-wallet" }
dioxus-popup = { path = "./deps/rust-sdk/packages/dioxus-popup" }

serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.133"
slog = "2.7.0"
common = { path = "./packages/common" }
reqwest = { version = "0.12.5", features = ["blocking", "json", "multipart"] }
sqlx = { version = "0.8.3", features = [
    "sqlite",
    "postgres",
    "runtime-tokio",
    "time",
    "bigdecimal",
] }

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
